[package]
name = "ultra_omega"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2.173"
omega = { path = "../omega" }


# Dependencies for our test harness are OPTIONAL for the library.
# The `optional = true` flag is key.
serde_json = { version = "1.0.140", optional = true }
sha2 = { version = "0.10.8", optional = true }


# --- FEATURES ---
# We define a feature that will pull in the optional dependencies.
[features]
# The 'test-harness-deps' feature will enable serde_json and sha2.
test-harness-deps = ["serde_json", "sha2"]

[lib]
name = "ultra_omega" # The name of your library crate
path = "src/lib.rs"

[[bin]]
name = "test-harness" # The name you'll use to run the binary
path = "src/bin/test_harness.rs"
required-features = ["test-harness-deps"]
