[package]
name = "ultra_omega"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2.174"
omega = { path = "../omega" }
ovp = { path = "../ovp" }
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
serde_json = "1.0.82"
sha2 = "0.10.8"

[[example]]
name = "test_harness"
path = "bin/test_harness.rs"
crate-type = ["rlib", "cdylib"]

[lib]
crate-type = ["rlib", "cdylib"]

