[package]
name = "omega"
version = "0.1.0"
edition = "2021"
description = "High-performance, memory-efficient data structures and algorithms"
authors = ["Anchit Singh"]
license = "Proprietary"
repository = "https://github.com/AnchitSingh/omega"
documentation = "https://docs.rs/omega"
keywords = ["data-structures", "collections", "performance", "hashmap", "hashset", "random-sampler", "random-generator"]
categories = ["data-structures", "algorithms"]

[features]
default = ["std"]
std = []
